<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MonsterCrea.MonsterCreationActivity">


        <View
            android:id="@+id/monsterCreationSeparator"
            android:layout_width="1dp"
            android:layout_height="280dp"
            android:layout_marginEnd="32dp"
            android:background="#FF000000"
            app:layout_constraintBottom_toTopOf="@+id/monsterCreationStats"
            app:layout_constraintEnd_toStartOf="@+id/monsterNewPart"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationNameLayout" />

        <TextView
            android:id="@+id/monsterCreationStats"
            android:layout_width="341dp"
            android:layout_height="165dp"
            android:layout_marginTop="430dp"
            android:background="@drawable/border_rectangle"
            android:padding="82dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/monsterCreationStatsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/statistics_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/monsterCreationStats"
            app:layout_constraintStart_toStartOf="@+id/monsterCreationStats"
            app:layout_constraintTop_toTopOf="@+id/monsterCreationStats" />

        <Button
            android:id="@+id/monsterCreationSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationStats"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/monsterCreationNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/monsterCreationMonsterName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/monster_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/monsterCreationStatsStrengh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="146dp"
            android:text="@string/profile_lvlNumber"
            app:layout_constraintEnd_toEndOf="@+id/monsterCreationStats"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationStatsTitle" />

        <TextView
            android:id="@+id/monsterCreationStatsIntel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="146dp"
            android:text="@string/profile_lvlNumber"
            app:layout_constraintEnd_toEndOf="@+id/monsterCreationStats"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationStatsStrengh" />

        <TextView
            android:id="@+id/monsterCreationStatsDext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="146dp"
            android:text="@string/profile_lvlNumber"
            app:layout_constraintEnd_toEndOf="@+id/monsterCreationStats"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationStatsIntel" />

        <TextView
            android:id="@+id/monsterCreationStatsHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="146dp"
            android:text="@string/profile_lvlNumber"
            app:layout_constraintEnd_toEndOf="@+id/monsterCreationStats"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationStatsDext" />


        <TextView
            android:id="@+id/monsterCreationSlots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:text="@string/slots"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/monsterCreationSeparator"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationNameLayout" />

        <TextView
            android:id="@+id/monsterCreationSlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="4dp"
            android:text="@string/slash"
            app:layout_constraintStart_toEndOf="@+id/monsterCreationSeparator"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationSlots" />

        <TextView
            android:id="@+id/monsterCreationMaxSlots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/slots_max"
            app:layout_constraintStart_toEndOf="@+id/monsterCreationSlash"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationSlots" />

        <TextView
            android:id="@+id/monsterCreationCurrentSlots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:text="@string/profile_lvlNumber"
            app:layout_constraintEnd_toStartOf="@+id/monsterCreationSlash"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationSlots" />

        <TextView
            android:id="@+id/monsterCreationStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/statistics_Strength"
            app:layout_constraintStart_toStartOf="@+id/monsterCreationStats"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationStatsTitle" />

        <TextView
            android:id="@+id/monsterCreationIntel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/statistics_Intel"
            app:layout_constraintStart_toStartOf="@+id/monsterCreationStats"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationStrength" />

        <TextView
            android:id="@+id/monsterCreationDext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/statistics_Dext"
            app:layout_constraintStart_toStartOf="@+id/monsterCreationStats"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationIntel" />

        <TextView
            android:id="@+id/monsterCreationHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/statistics_HP"
            app:layout_constraintStart_toStartOf="@+id/monsterCreationStats"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationDext" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/partsRecycler"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            app:layout_constraintBottom_toTopOf="@+id/monsterCreationStats"
            app:layout_constraintEnd_toStartOf="@+id/monsterCreationSeparator"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monsterCreationNameLayout"
            app:layout_constraintVertical_bias="0.425" />

        <Button
            android:id="@+id/monsterNewPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/newP"
            app:layout_constraintBottom_toTopOf="@+id/monsterCreationStats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/monsterCreationSlash"
            app:layout_constraintVertical_bias="0.468" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>