<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity">

        <TextView
            android:id="@+id/accountLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/signin_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/accountLoginEnterUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/signin_email"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginTitle" />

        <EditText
            android:id="@+id/accountLoginEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:autofillHints="@string/signin_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark_golden_rod"
            android:textColorHint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginEnterUsername" />

        <TextView
            android:id="@+id/accountLoginEnterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/signin_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginEmail" />

        <EditText
            android:id="@+id/accountLoginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:autofillHints="@string/signin_password"
            android:inputType="textPassword"
            android:textColor="@color/dark_golden_rod"
            android:textColorHint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginEnterPassword" />

        <Button
            android:id="@+id/accountLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/signin_connect"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginText" />

        <TextView
            android:id="@+id/accountLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="Je n'ai pas encore de compte : "
            android:textColor="@color/black"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.381"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginPwdForgotten" />

        <TextView
            android:id="@+id/account_login_new"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/ic_circle_arrow"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/accountLoginText"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginPwdForgotten" />

        <ImageView
            android:id="@+id/accountLoginMailIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/profileImage_description"
            app:layout_constraintBottom_toTopOf="@+id/accountLoginEnterPassword"
            app:layout_constraintEnd_toStartOf="@+id/accountLoginEmail"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginEnterUsername"
            app:layout_constraintVertical_bias="0.4"
            app:srcCompat="@drawable/ic_account" />

        <ImageView
            android:id="@+id/accountLoginPasswordIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/keyImage_description"
            app:layout_constraintBottom_toTopOf="@+id/accountLoginPwdForgotten"
            app:layout_constraintEnd_toStartOf="@+id/accountLoginPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginEnterPassword"
            app:srcCompat="@drawable/ic_key" />

        <TextView
            android:id="@+id/accountLoginPwdForgotten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forgotten_password"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>